--- a/LightBeacon/LightBeacon/Info.plist
+++ b/LightBeacon/LightBeacon/Info.plist
@@ -23,7 +23,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Allow LightBeacon to monitor your Gimbal beacon</string>
+	<string>Allows LightBeacon to monitor your Gimbal beacon</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>bluetooth-central</string>
